<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8E8E8"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minWidth="1000dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_word" />

                <TextView
                    android:id="@+id/tvNewWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_close" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient"
            android:hint="@string/dish_hint_name"
            android:paddingTop="8dp"
            android:textColorHint="@color/hint_text"
            app:hintTextAppearance="@style/FloatLabelEditTextStyle">

            <EditText
                android:id="@+id/edtRecipeName"
                style="@style/FloatLabelEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient"
            android:hint="@string/dish_hint_ingredient"
            android:paddingTop="8dp"
            android:textColorHint="@color/hint_text"
            app:hintTextAppearance="@style/FloatLabelEditTextStyle">

            <EditText
                android:id="@+id/edtingredient"
                style="@style/FloatLabelEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient"
            android:hint="@string/dish_hint_description"
            android:paddingTop="8dp"
            android:textColorHint="@color/hint_text"
            app:hintTextAppearance="@style/FloatLabelEditTextStyle">

            <EditText
                android:id="@+id/edtDescription"
                style="@style/FloatLabelEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:lines="2"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spRecipeTypes"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient"
            android:hint="@string/dish_hint_portions"
            android:paddingTop="8dp"
            android:textColorHint="@color/hint_text"
            app:hintTextAppearance="@style/FloatLabelEditTextStyle">

            <EditText
                android:id="@+id/edtPortions"
                style="@style/FloatLabelEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient"
            android:hint="@string/dish_hint_terms"
            android:paddingTop="8dp"
            android:textColorHint="@color/hint_text"
            app:hintTextAppearance="@style/FloatLabelEditTextStyle">

            <EditText
                android:id="@+id/edtTerms"
                style="@style/FloatLabelEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:typeface="monospace" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnUpdateRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient"
            android:text="@string/btn_update_recipe" />

    </LinearLayout>
</ScrollView>