<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tienganh.vocabulary.view.activities.main.MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:minWidth="1000dp"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:id="@+id/blurHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_word" />

                        <TextView
                            android:id="@+id/tvYourWord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:paddingBottom="7dp"
                            android:paddingTop="7dp"
                            android:text="@string/your_word"
                            android:textColor="@color/black_01"
                            android:textSize="24sp"
                            android:textStyle="normal" />
                    </LinearLayout>


                    <ImageView
                        android:id="@+id/btnClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_close" />

                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/gradient"
                    android:hint="@string/dish_hint_name"
                    android:paddingTop="4dp"
                    android:textColorHint="@color/hint_text"
                    app:hintTextAppearance="@style/FloatLabelEditTextStyle">

                    <EditText
                        android:id="@+id/edtName"
                        style="@style/FloatLabelEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingBottom="2dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="2dp"
                        android:textSize="16sp"
                        android:typeface="monospace" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvUK"
                        android:text="@string/label_UK"
                        android:layout_marginStart="16dp"
                        android:textSize="18sp"
                        android:textColor="@color/red_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_speaker" />

                    <TextView
                        android:id="@+id/phoneticUK"
                        android:textStyle="italic"
                        android:text="/heˈləʊ/"
                        android:layout_marginStart="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/blue_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvUS"
                        android:text="@string/label_US"
                        android:textSize="18sp"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/red_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_speaker" />

                    <TextView
                        android:id="@+id/phoneticUS"
                        android:textStyle="italic"
                        android:text="/heˈləʊ/"
                        android:layout_marginStart="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/blue_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/gradient"
                    android:hint="@string/dish_hint_ingredient"
                    android:paddingTop="4dp"
                    android:textColorHint="@color/hint_text"
                    app:hintTextAppearance="@style/FloatLabelEditTextStyle">

                    <EditText
                        android:id="@+id/edtingredient"
                        style="@style/FloatLabelEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:paddingBottom="2dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="2dp"
                        android:textSize="16sp"
                        android:typeface="monospace" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/gradient"
                    android:hint="@string/dish_hint_description"
                    android:paddingTop="8dp"
                    android:textColorHint="@color/hint_text"
                    app:hintTextAppearance="@style/FloatLabelEditTextStyle">

                    <EditText
                        android:id="@+id/edtDescription"
                        style="@style/FloatLabelEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:lines="2"
                        android:paddingBottom="2dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="2dp"
                        android:textSize="14sp"
                        android:typeface="monospace" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spRecipeTypes"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gradient" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/gradient"
                    android:hint="@string/dish_hint_portions"
                    android:paddingTop="8dp"
                    android:textColorHint="@color/hint_text"
                    app:hintTextAppearance="@style/FloatLabelEditTextStyle">

                    <EditText
                        android:id="@+id/edtPortions"
                        style="@style/FloatLabelEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:paddingBottom="2dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="2dp"
                        android:textSize="14sp"
                        android:typeface="monospace" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/gradient"
                    android:hint="@string/dish_hint_terms"
                    android:paddingTop="8dp"
                    android:textColorHint="@color/hint_text"
                    app:hintTextAppearance="@style/FloatLabelEditTextStyle">

                    <EditText
                        android:id="@+id/edtTerms"
                        style="@style/FloatLabelEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingBottom="2dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="2dp"
                        android:textSize="14sp"
                        android:typeface="monospace" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnNewRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/gradient"
                    android:text="@string/btn_new_recipe" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>

